Update favicon and add metadata

--- a/index.html
+++ b/index.html
@@ -2,13 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="icon" href="/favicon.ico" />
+    <link
+      rel="icon"
+      type="icon"
+      href="https://galiprandi.github.io/me/images/profile_circle.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://galiprandi.github.io/css-toolset/css-toolset.min.css"
     />
-    <title>React to md</title>
+    <title>Markdown Viewer</title>
+    <meta
+      name="description"
+      content="Markdown Viewer is a web application built with React, designed to render Markdown files directly from URLs."
+    />
+    <meta name="keywords" content="Markdown, Viewer, React, Web Application" />
+    <meta name="author" content="Germán Aliprandi" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://galiprandi.github.io/me/images/profile_circle.png"
+    />
+    <link
+      rel="stylesheet"
+      href="https://galiprandi.github.io/css-toolset/css-toolset.min.css"
+    />
   </head>
   <body>
     <div id="root"></div>
